crates/mergeiq-core/tests/snapshots/golden__no-changes.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 0,
  "chunks": []
}
