crates/mergeiq-core/tests/snapshots/golden__non-overlapping.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 2,
  "chunks": [
    {
      "kind": "OursOnly",
      "base": [
        1,
        2
      ],
      "ours": [
        1,
        2
      ],
      "theirs": [
        1,
        2
      ]
    },
    {
      "kind": "TheirsOnly",
      "base": [
        7,
        8
      ],
      "ours": [
        7,
        8
      ],
      "theirs": [
        7,
        8
      ]
    }
  ]
}
