crates/mergeiq-core/tests/snapshots/golden__ours-only-insertion.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 1,
  "chunks": [
    {
      "kind": "OursOnly",
      "base": [
        1,
        1
      ],
      "ours": [
        1,
        2
      ],
      "theirs": [
        1,
        1
      ]
    }
  ]
}
