crates/mergeiq-core/tests/snapshots/golden__python-sample.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 2,
  "chunks": [
    {
      "kind": "TheirsOnly",
      "base": [
        1,
        1
      ],
      "ours": [
        1,
        1
      ],
      "theirs": [
        1,
        2
      ]
    },
    {
      "kind": "OursOnly",
      "base": [
        4,
        5
      ],
      "ours": [
        4,
        5
      ],
      "theirs": [
        5,
        6
      ]
    }
  ]
}
