crates/mergeiq-core/tests/snapshots/golden__same-point-insertion.snap
---
source: crates/mergeiq-core/tests/golden.rs
expression: summary
---
{
  "dominant_eol": "Lf",
  "encoding": "Utf8",
  "chunk_count": 1,
  "chunks": [
    {
      "kind": "Conflict",
      "base": [
        2,
        2
      ],
      "ours": [
        2,
        3
      ],
      "theirs": [
        2,
        3
      ]
    }
  ]
}
